# airplay-protocol

./: Cargo.toml  Readme.md  build.rs
benches/: my_benchmark.rs
examples/airtsp/: main.rs
examples/audio/: main.rs
examples/bnumber/: main.rs
examples/bufread/: main.rs
examples/fcall/: main.rs
examples/ffi_clib/: main.rs
examples/gcm/: main.rs
examples/httpdecode/: main.rs
examples/lifefut/: main.rs
examples/pair/: main.rs
examples/plist/: main.rs
examples/sn/: main.rs
examples/srp/: main.rs
examples/to_bytes/: main.rs
libc/: foo.c
libmdns/src/: fsm.rs  lib.rs
libmdns/src/dns_parser/: structs.rs
src/: airplay_bonjour.rs  control_handle.rs  lib.rs  main.rs  utils.rs
src/airplay/: airplay_consumer.rs  mod.rs  property_list.rs  session.rs
src/airplay/lib/: audio_stream_info.rs  fairplay.rs  fairplay_audio_decryptor.rs  fairplay_video_decryptor.rs  hand_garble.rs  media_stream_info.rs  mod.rs  modified_md5.rs  omg_hax.rs  omg_hax_const.rs  pairing.rs  rtsp.rs  sap_hash.rs  video_stream_info.rs
src/airplay/server/: audio_server.rs  mod.rs  video_server.rs
src/net/: mod.rs  request.rs  response.rs  server.rs
src/srp/: airsrp.rs  mod.rs
tp_macro/: Cargo.toml
tp_macro/src/: lib.rs
