[package]
edition = "2021"
name = "mdns-exp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
# async-zeroconf = "0.2.2"
anyhow = "1"
bytes = "1"
ctr = "0.9.2"
curve25519-dalek = {version = "4.0.0-rc.2", features = ["rand_core"]}
ed25519 = "2"
ed25519-dalek = {version = "2.0.0-rc.2", features = ["rand_core"]}
env_logger = "0.10"
futures = "0.3"
httparse = "1.8"
hyper = {version = "0.14", features = ["full"]}
libmdns = {path = "./libmdns"}
log = "0.4"
plist = "1.4"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
sha2 = "0.10"
tokio = {version = "1", features = ["full"]}
