[package]
edition = "2021"
name = "airplay2-protocol"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
# async-zeroconf = "0.2.2"
aes-gcm = "0.10"
anyhow = "1"
bnum = {version = "0.7", features = ["nightly"]}
byteorder = "1"
bytes = "1"
cbc = "0.1.2"
chrono = "0.4"
ctr = "0.9.2"
curve25519-dalek = {version = "4.0.0-rc.2", features = ["rand_core"]}
default-net = "0.15"
ed25519 = "2"
ed25519-dalek = {version = "2.0.0-rc.2", features = ["rand_core"]}
env_logger = "0.10"
futures = "0.3"
# gstreamer = "0.20"
hex = "0.4"
http = "0.2"
libc = "0.2"
libmdns = {path = "./libmdns"}
num-bigint = {version = "0.4", features = ["rand"]}
num-traits = "0.2"
obfstr = "0.4"
plist = "1.4"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
sha-1 = "0.10"
sha2 = "0.10"
tokio = {version = "1", features = ["full"]}
tp_macro = {path = "tp_macro"}

[dependencies.log]
version = "0.4"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[build-dependencies]
cc = "1"

[[bench]]
harness = false
name = "my_benchmark"

[profile.dev]
overflow-checks = false

[profile.release]
strip = true

[workspace]
members = ["tp_macro"]

# [features]
# default = ["log/release_max_level_trace"]
